--- a/KlasifikasiKeluhan_Modeling.ipynb
+++ b/KlasifikasiKeluhan_Modeling.ipynb
@@ -9,23 +9,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(0, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
+    "from joblib import dump, load\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer"
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "print(range(0,3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       atheos mungkin perempuan bj merah yg paling li...\n",
+      "1       kang teman timpa pohn dijln sangkuriang dpn po...\n",
+      "2       di tribun jabar biasa suka post agenda kang em...\n",
+      "3       rt lapor pak lampu terang jalan depan kampus l...\n",
+      "4       bapakibu mau tanya kalo pelihara taman2 yg ban...\n",
+      "5       pa tempat kerja tgl 25 tetep masuk gimana atur...\n",
+      "6       00106700466 punten minggu air pdam alir mohon ...\n",
+      "7                  rt anak sma tahu curi hem bip hari pak\n",
+      "8       nyata warga yg konfirm pdamkatanya air alir la...\n",
+      "9       kang jalan muararajeun baru baru bulan dibener...\n",
+      "10      rt didinyamah kieu bosss maha pak daerah sapha...\n",
+      "11      pak punten marahin motor yg ga pake spakbor be...\n",
+      "12              hatur nuhun dbmp lampu jlmerdeka atos sae\n",
+      "13      kalo mau batas kendara yg feasible laku segera...\n",
+      "14      rt pak punten marahin motor yg ga pake spakbor...\n",
+      "15      pak tadi habis kebun binatang bersih kurang or...\n",
+      "16      rt lapor pak mobil ni 2x buang sampah pinggir ...\n",
+      "17      bonbin bandung kurang awat kasi sama hewan hew...\n",
+      "18      pak sy pnya saran angkot 08 antapani yg coklat...\n",
+      "19      rt lapor pak mobil ni 2x buang sampah pinggir ...\n",
+      "20      pak sya lg mau pulang naek diangkot cheum lede...\n",
+      "21      kotabdg seperti buat jlnan macet adlah prmptan...\n",
+      "22      kalau macet begini lihat depan apa macet angko...\n",
+      "23      saurwargi tolg ad orang wanita d jl eikman tia...\n",
+      "24      jabar kotabdg dukung rencana badan hukum angko...\n",
+      "25      rt bdg saurwargi tolg ad orang wanita d jl eik...\n",
+      "26      atheos he he perempuan belum dh tanya sama rk ...\n",
+      "27      punten baru denger berita apa tertib modus amb...\n",
+      "28      min kalau lihat foto bawah benar jl cemara mil...\n",
+      "29      rt min kalau lihat foto bawah benar jl cemara ...\n",
+      "                              ...                        \n",
+      "7497    forever orang baik niat baik yg bangsa butuh a...\n",
+      "7498    jual laser ga ganggu sm sekaliga yg celakabyk ...\n",
+      "7499    kangtd mlm jln cikutra orng papua pd ngamuk bw...\n",
+      "7500                rt tertib pkl panjang jlremartadinata\n",
+      "7501               rt 281 urc pju baik lampu pju jl karya\n",
+      "7502         rt 281 urc pju baik lampu pju jl gunung batu\n",
+      "7503    pak kemarin berita jomlo bandung yg minta bant...\n",
+      "7504              rt lalinbdg 1816 jl moch toha banjir cc\n",
+      "7505          rt gimana dialog kalau larang bicara publik\n",
+      "7506    ada solusi lebih simpel murah atas macet proye...\n",
+      "7507    jual atas trotoar depan ptinti jlmochtohabersi...\n",
+      "7508    rt permanadp jual atas trotoar depan ptinti jl...\n",
+      "7509    di katamso dpn kursus bahasa sptnya bocor pipa...\n",
+      "7510    rt di katamso dpn kursus bahasa sptnya bocor p...\n",
+      "7511    waspada dukung tdk tulus dr org2 yg tdk suka i...\n",
+      "7512    dapat informasi air keluar asal bak kontrol te...\n",
+      "7513    bagus bangun yg langgar dpt sanksi hanya utk l...\n",
+      "7514    kotabdg ngalonyeng keneh teu kapokkeun geuning...\n",
+      "7515    pa tong nyalon ka jakarta atuh pa warga bdg ny...\n",
+      "7516    makin speechless sama bandungjuara amp jalan r...\n",
+      "7517          kirain spanduk simpatisan isis larang masuk\n",
+      "7518                                   kpn pak baik mulai\n",
+      "7519                 tim urc gedebage msh jl bunga bakung\n",
+      "7520    kotabdg oia klo ga salah tadi lampu merah empa...\n",
+      "7521    jadi gubernur dki jakarta dikitdikit kena krit...\n",
+      "7522    rt 98 pa tong nyalon ka jakarta atuh pa warga ...\n",
+      "7523    whattdi jabar msh byk daerah potensi yg blm ja...\n",
+      "7524    nah maksudnyakrn blm serahterima pdhl jalan ru...\n",
+      "7525    buka twitter muncul promote ginian gimana atuh...\n",
+      "7526    rt kang angkot jadi timebased pake halte mungk...\n",
+      "Name: TweetProcessed, Length: 7527, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
-    "data = pd.read_csv('keluhan_processed.csv', encoding='ISO-8859-1')\n",
+    "data = pd.read_csv('data/keluhan_processed.csv', encoding='ISO-8859-1')\n",
     "X = data['TweetProcessed']\n",
     "y = data['Keluhan']"
    ]
@@ -39,12 +119,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['model/vectorizer/vec1.joblib']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vectorizer = CountVectorizer(ngram_range=(2,2))\n",
-    "X1 = vectorizer.fit_transform(X)"
+    "X1 = vectorizer.fit_transform(X)\n",
+    "dump(vectorizer, 'model/vectorizer/vec1.joblib')"
    ]
   },
   {
@@ -56,12 +148,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['model/vectorizer/vec2.joblib']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vectorizer = TfidfVectorizer(ngram_range=(2,2), norm=None)\n",
-    "X2 = vectorizer.fit_transform(X)"
+    "X2 = vectorizer.fit_transform(X)\n",
+    "dump(vectorizer, 'model/vectorizer/vec2.joblib')"
    ]
   },
   {
@@ -73,12 +177,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['model/vectorizer/vec3.joblib']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vectorizer = TfidfVectorizer(ngram_range=(2,2))\n",
-    "X3 = vectorizer.fit_transform(X)"
+    "X3 = vectorizer.fit_transform(X)\n",
+    "dump(vectorizer, 'model/vectorizer/vec3.joblib')"
    ]
   },
   {
@@ -90,12 +206,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from joblib import dump, load\n",
-    "\n",
     "from sklearn.metrics import f1_score\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -118,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
