retrain for multiclass

--- a/KlasifikasiKeluhan_Modeling.ipynb
+++ b/KlasifikasiKeluhan_Modeling.ipynb
@@ -9,105 +9,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "range(0, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "from joblib import dump, load\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "\n",
-    "print(range(0,3))"
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0       atheos mungkin perempuan bj merah yg paling li...\n",
-      "1       kang teman timpa pohn dijln sangkuriang dpn po...\n",
-      "2       di tribun jabar biasa suka post agenda kang em...\n",
-      "3       rt lapor pak lampu terang jalan depan kampus l...\n",
-      "4       bapakibu mau tanya kalo pelihara taman2 yg ban...\n",
-      "5       pa tempat kerja tgl 25 tetep masuk gimana atur...\n",
-      "6       00106700466 punten minggu air pdam alir mohon ...\n",
-      "7                  rt anak sma tahu curi hem bip hari pak\n",
-      "8       nyata warga yg konfirm pdamkatanya air alir la...\n",
-      "9       kang jalan muararajeun baru baru bulan dibener...\n",
-      "10      rt didinyamah kieu bosss maha pak daerah sapha...\n",
-      "11      pak punten marahin motor yg ga pake spakbor be...\n",
-      "12              hatur nuhun dbmp lampu jlmerdeka atos sae\n",
-      "13      kalo mau batas kendara yg feasible laku segera...\n",
-      "14      rt pak punten marahin motor yg ga pake spakbor...\n",
-      "15      pak tadi habis kebun binatang bersih kurang or...\n",
-      "16      rt lapor pak mobil ni 2x buang sampah pinggir ...\n",
-      "17      bonbin bandung kurang awat kasi sama hewan hew...\n",
-      "18      pak sy pnya saran angkot 08 antapani yg coklat...\n",
-      "19      rt lapor pak mobil ni 2x buang sampah pinggir ...\n",
-      "20      pak sya lg mau pulang naek diangkot cheum lede...\n",
-      "21      kotabdg seperti buat jlnan macet adlah prmptan...\n",
-      "22      kalau macet begini lihat depan apa macet angko...\n",
-      "23      saurwargi tolg ad orang wanita d jl eikman tia...\n",
-      "24      jabar kotabdg dukung rencana badan hukum angko...\n",
-      "25      rt bdg saurwargi tolg ad orang wanita d jl eik...\n",
-      "26      atheos he he perempuan belum dh tanya sama rk ...\n",
-      "27      punten baru denger berita apa tertib modus amb...\n",
-      "28      min kalau lihat foto bawah benar jl cemara mil...\n",
-      "29      rt min kalau lihat foto bawah benar jl cemara ...\n",
-      "                              ...                        \n",
-      "7497    forever orang baik niat baik yg bangsa butuh a...\n",
-      "7498    jual laser ga ganggu sm sekaliga yg celakabyk ...\n",
-      "7499    kangtd mlm jln cikutra orng papua pd ngamuk bw...\n",
-      "7500                rt tertib pkl panjang jlremartadinata\n",
-      "7501               rt 281 urc pju baik lampu pju jl karya\n",
-      "7502         rt 281 urc pju baik lampu pju jl gunung batu\n",
-      "7503    pak kemarin berita jomlo bandung yg minta bant...\n",
-      "7504              rt lalinbdg 1816 jl moch toha banjir cc\n",
-      "7505          rt gimana dialog kalau larang bicara publik\n",
-      "7506    ada solusi lebih simpel murah atas macet proye...\n",
-      "7507    jual atas trotoar depan ptinti jlmochtohabersi...\n",
-      "7508    rt permanadp jual atas trotoar depan ptinti jl...\n",
-      "7509    di katamso dpn kursus bahasa sptnya bocor pipa...\n",
-      "7510    rt di katamso dpn kursus bahasa sptnya bocor p...\n",
-      "7511    waspada dukung tdk tulus dr org2 yg tdk suka i...\n",
-      "7512    dapat informasi air keluar asal bak kontrol te...\n",
-      "7513    bagus bangun yg langgar dpt sanksi hanya utk l...\n",
-      "7514    kotabdg ngalonyeng keneh teu kapokkeun geuning...\n",
-      "7515    pa tong nyalon ka jakarta atuh pa warga bdg ny...\n",
-      "7516    makin speechless sama bandungjuara amp jalan r...\n",
-      "7517          kirain spanduk simpatisan isis larang masuk\n",
-      "7518                                   kpn pak baik mulai\n",
-      "7519                 tim urc gedebage msh jl bunga bakung\n",
-      "7520    kotabdg oia klo ga salah tadi lampu merah empa...\n",
-      "7521    jadi gubernur dki jakarta dikitdikit kena krit...\n",
-      "7522    rt 98 pa tong nyalon ka jakarta atuh pa warga ...\n",
-      "7523    whattdi jabar msh byk daerah potensi yg blm ja...\n",
-      "7524    nah maksudnyakrn blm serahterima pdhl jalan ru...\n",
-      "7525    buka twitter muncul promote ginian gimana atuh...\n",
-      "7526    rt kang angkot jadi timebased pake halte mungk...\n",
-      "Name: TweetProcessed, Length: 7527, dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = pd.read_csv('data/keluhan_processed.csv', encoding='ISO-8859-1')\n",
+    "data = data[(data['Keluhan'] == 1) | (data['Respon'] == 1) | (data['Other'] == 1)]\n",
+    "\n",
+    "label = []\n",
+    "for x in data.values:\n",
+    "    if x[1] == 1:\n",
+    "        label.append(1.0)\n",
+    "    elif x[2] == 1:\n",
+    "        label.append(2.0)\n",
+    "    elif x[3] == 1:\n",
+    "        label.append(3.0)\n",
+    "\n",
+    "data.insert(loc=1, column='Label', value=label)\n",
+    "data = data.loc[:, 'TweetProcessed':'Label']\n",
+    "\n",
     "X = data['TweetProcessed']\n",
-    "y = data['Keluhan']"
+    "y = data['Label']"
    ]
   },
   {
@@ -119,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +63,7 @@
        "['model/vectorizer/vec1.joblib']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +92,7 @@
        "['model/vectorizer/vec2.joblib']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +121,7 @@
        "['model/vectorizer/vec3.joblib']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,9 +153,9 @@
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
-    "X1_train, X1_test, y1_train, y1_test = train_test_split(X1, y, test_size=0.4, random_state=0)\n",
-    "X2_train, X2_test, y2_train, y2_test = train_test_split(X2, y, test_size=0.4, random_state=1)\n",
-    "X3_train, X3_test, y3_train, y3_test = train_test_split(X3, y, test_size=0.4, random_state=2)"
+    "X1_train, X1_test, y1_train, y1_test = train_test_split(X1, y, test_size=0.2, random_state=0)\n",
+    "X2_train, X2_test, y2_train, y2_test = train_test_split(X2, y, test_size=0.2, random_state=1)\n",
+    "X3_train, X3_test, y3_train, y3_test = train_test_split(X3, y, test_size=0.2, random_state=2)"
    ]
   },
   {
@@ -232,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,15 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score:  0.6994652406417112\n",
-      "Accuracy:  0.8133510461640651\n"
+      "[3. 3. 2. 1. 3. 3. 3. 3. 2. 1.]\n",
+      "F1 score:  0.8590568569417046\n",
+      "Accuracy:  0.8371010638297872\n"
      ]
     }
    ],
@@ -265,7 +201,8 @@
     "dump(tree_classifier, 'model/tree/tree1.joblib')\n",
     "\n",
     "prediction = tree_classifier.predict(X1_test)\n",
-    "print('F1 score: ', f1_score(prediction, y1_test))\n",
+    "print(prediction[:10])\n",
+    "print('F1 score: ', f1_score(prediction, y1_test, average='macro'))\n",
     "print('Accuracy: ', accuracy_score(prediction, y1_test))"
    ]
   },
@@ -278,15 +215,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score:  0.7233160621761657\n",
-      "Accuracy:  0.8226502822982398\n"
+      "[1. 3. 2. 1. 3. 3. 1. 3. 1. 3.]\n",
+      "F1 score:  0.8533065656853438\n",
+      "Accuracy:  0.8331117021276596\n"
      ]
     }
    ],
@@ -295,7 +233,8 @@
     "dump(tree_classifier, 'model/tree/tree2.joblib')\n",
     "\n",
     "prediction = tree_classifier.predict(X2_test)\n",
-    "print('F1 score: ', f1_score(prediction, y2_test))\n",
+    "print(prediction[:10])\n",
+    "print('F1 score: ', f1_score(prediction, y2_test, average='macro'))\n",
     "print('Accuracy: ', accuracy_score(prediction, y2_test))"
    ]
   },
@@ -308,15 +247,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score:  0.7170809095716552\n",
-      "Accuracy:  0.8223181667220193\n"
+      "[3. 3. 1. 3. 3. 3. 3. 2. 1. 3.]\n",
+      "F1 score:  0.8396512615240778\n",
+      "Accuracy:  0.8164893617021277\n"
      ]
     }
    ],
@@ -325,7 +265,8 @@
     "dump(tree_classifier, 'model/tree/tree3.joblib')\n",
     "\n",
     "prediction = tree_classifier.predict(X3_test)\n",
-    "print('F1 score: ', f1_score(prediction, y3_test))\n",
+    "print(prediction[:10])\n",
+    "print('F1 score: ', f1_score(prediction, y3_test, average='macro'))\n",
     "print('Accuracy: ', accuracy_score(prediction, y3_test))"
    ]
   },
@@ -338,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,15 +295,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score:  0.7447033898305085\n",
-      "Accuracy:  0.8399202922617071\n"
+      "[3. 3. 2. 1. 3. 3. 3. 3. 2. 3.]\n",
+      "F1 score:  0.8902226740284904\n",
+      "Accuracy:  0.8710106382978723\n"
      ]
     }
    ],
@@ -371,7 +313,8 @@
     "dump(svm_classifier, 'model/svm/svm1.joblib')\n",
     "\n",
     "prediction = svm_classifier.predict(X1_test)\n",
-    "print('F1 score: ', f1_score(prediction, y1_test))\n",
+    "print(prediction[:10])\n",
+    "print('F1 score: ', f1_score(prediction, y1_test, average='macro'))\n",
     "print('Accuracy: ', accuracy_score(prediction, y1_test))"
    ]
   },
@@ -384,23 +327,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score:  0.7992370052455889\n",
-      "Accuracy:  0.8601793424111591\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\program files\\python36\\lib\\site-packages\\sklearn\\svm\\base.py:931: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  \"the number of iterations.\", ConvergenceWarning)\n"
+      "[1. 3. 2. 1. 3. 3. 3. 3. 1. 3.]\n",
+      "F1 score:  0.873183262502148\n",
+      "Accuracy:  0.8543882978723404\n"
      ]
     }
    ],
@@ -409,7 +345,8 @@
     "dump(svm_classifier, 'model/svm/svm2.joblib')\n",
     "\n",
     "prediction = svm_classifier.predict(X2_test)\n",
-    "print('F1 score: ', f1_score(prediction, y2_test))\n",
+    "print(prediction[:10])\n",
+    "print('F1 score: ', f1_score(prediction, y2_test, average='macro'))\n",
     "print('Accuracy: ', accuracy_score(prediction, y2_test))"
    ]
   },
@@ -422,15 +359,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score:  0.7937438905180841\n",
-      "Accuracy:  0.8598472268349385\n"
+      "[3. 3. 1. 3. 1. 3. 3. 2. 1. 3.]\n",
+      "F1 score:  0.8864070103949535\n",
+      "Accuracy:  0.8617021276595744\n"
      ]
     }
    ],
@@ -439,7 +377,8 @@
     "dump(svm_classifier, 'model/svm/svm3.joblib')\n",
     "\n",
     "prediction = svm_classifier.predict(X3_test)\n",
-    "print('F1 score: ', f1_score(prediction, y3_test))\n",
+    "print(prediction[:10])\n",
+    "print('F1 score: ', f1_score(prediction, y3_test, average='macro'))\n",
     "print('Accuracy: ', accuracy_score(prediction, y3_test))"
    ]
   },
@@ -452,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,15 +407,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score:  0.7086614173228346\n",
-      "Accuracy:  0.8279641315177682\n"
+      "[3. 3. 2. 1. 3. 3. 3. 3. 2. 1.]\n",
+      "F1 score:  0.8853673145880037\n",
+      "Accuracy:  0.8656914893617021\n"
      ]
     }
    ],
@@ -485,7 +425,8 @@
     "dump(mlp_classifier, 'model/mlp/mlp1.joblib')\n",
     "\n",
     "prediction = mlp_classifier.predict(X1_test)\n",
-    "print('F1 score: ', f1_score(prediction, y1_test))\n",
+    "print(prediction[:10])\n",
+    "print('F1 score: ', f1_score(prediction, y1_test, average='macro'))\n",
     "print('Accuracy: ', accuracy_score(prediction, y1_test))"
    ]
   },
@@ -498,15 +439,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score:  0.8102658111824015\n",
-      "Accuracy:  0.8625041514447027\n"
+      "[1. 3. 2. 1. 3. 1. 3. 1. 1. 3.]\n",
+      "F1 score:  0.8744004322517958\n",
+      "Accuracy:  0.8517287234042553\n"
      ]
     }
    ],
@@ -515,7 +457,8 @@
     "dump(mlp_classifier, 'model/mlp/mlp2.joblib')\n",
     "\n",
     "prediction = mlp_classifier.predict(X2_test)\n",
-    "print('F1 score: ', f1_score(prediction, y2_test))\n",
+    "print(prediction[:10])\n",
+    "print('F1 score: ', f1_score(prediction, y2_test, average='macro'))\n",
     "print('Accuracy: ', accuracy_score(prediction, y2_test))"
    ]
   },
@@ -528,15 +471,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score:  0.7983034872761545\n",
-      "Accuracy:  0.8578545333776154\n"
+      "[1. 3. 3. 3. 1. 3. 3. 2. 1. 3.]\n",
+      "F1 score:  0.8884593533568904\n",
+      "Accuracy:  0.8663563829787234\n"
      ]
     }
    ],
@@ -545,7 +489,8 @@
     "dump(mlp_classifier, 'model/mlp/mlp3.joblib')\n",
     "\n",
     "prediction = mlp_classifier.predict(X3_test)\n",
-    "print('F1 score: ', f1_score(prediction, y3_test))\n",
+    "print(prediction[:10])\n",
+    "print('F1 score: ', f1_score(prediction, y3_test, average='macro'))\n",
     "print('Accuracy: ', accuracy_score(prediction, y3_test))"
    ]
   },
